--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -308,7 +308,7 @@
             </div>
             <div class="row text-center sponsors">
                 <div class="col-md-12">
-                    <a href="https://www.hackerearth.com/" target="_blank"><img src="images/hackerearth.png" width="240"></a>
+                    <a href="https://beta.skillenza.com/" target="_blank"><img src="images/skillenza.png" width="240"></a>
                 </div>
             </div>
             <div class="register col-md-12 text-center  ">
