--- a/index.html
+++ b/index.html
@@ -349,22 +349,22 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     <form action="https://www.enformed.io/a55ohil" method="POST">
                         <div class="form-group">
                             <label>Name</label>
-                            <input name="first_name" type="text" class="form-control" />
+                            <input name="first_name" type="text" class="form-control" required>
                         </div>
 
                         <div class="form-group">
                             <label>Email</label>
-                            <input name="e_mail" type="text" class="form-control" />
+                            <input name="e_mail" type="text" class="form-control" required>
                         </div>
 
                         <div class="form-group">
                             <label>Mobile No.</label>
-                            <input name="mobile" type="number" class="form-control" />
+                            <input name="mobile" type="number" class="form-control" required>
                         </div>
 
                         <div class="form-group">
                             <label>Your message</label>
-                            <textarea name="message" type="text" class="form-control" /></textarea>
+                            <textarea name="message" type="text" class="form-control" required></textarea>
                         </div>
                         <button type="submit" class="g-recaptcha btn btn-default" data-sitekey="6LeHlDcUAAAAAOgMsoxmDZcSFmwAVyRYhqDoHPoU" data-callback="YourOnSubmitFn">
                         Submit
