--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -321,6 +321,26 @@
                     <a href="http://dubeat.com/" target="_blank"><img src="images/du_beats.jpg" width="240"></a>
                 </div>
             </div>
+            <div class="row topics">
+                <div class="col-md-12 section-heading text-center to-animate">
+                    <h2 class="to-animate">Student Partner</h2>
+                </div>
+            </div>
+            <div class="row text-center sponsors">
+                <div class="col-md-12">
+                    <a href="https://frapp.in/" target="_blank"><img src="images/frapp_logo.png" width="240"></a>
+                </div>
+            </div>
+            <div class="row topics">
+                <div class="col-md-12 section-heading text-center to-animate">
+                    <h2 class="to-animate">Chat Partner</h2>
+                </div>
+            </div>
+            <div class="row text-center sponsors">
+                <div class="col-md-12">
+                    <a href="https://zulipchat.com/" target="_blank"><img src="images/zulip.png" width="240"></a>
+                </div>
+            </div>
             
             
             <div class="register col-md-12 text-center  ">
