--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -301,6 +301,8 @@
                     <a href="https://www.cafecoffeeday.com/" target="_blank"><img src="images/ccd.png" width="150"></a>
                 </div>
             </div>
+            <div class="space"></div>
+            <div class="space"></div>
             <div class="row">
             <div class="col-sm-3">
             <div class="row topics">
