--- a/microsoft-hackathon.html
+++ b/microsoft-hackathon.html
@@ -302,19 +302,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="row topics">
-                        <div class="col-md-4 col-sm-12 section-heading text-center to-animate">
+                        <div class="col-sm-12 section-heading text-center to-animate">
                             <h2 class="to-animate">Platform Sponsor</h2>
                         </div>
                     </div>
                     <div class="row text-center sponsors">
-                        <div class="col-md-4 col-sm-12">
+                        <div class="col-md-12">
                             <a href="https://www.hackerearth.com/" target="_blank"><img src="images/hackerearth.png" width="240"></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="row topics">
                         <div class="col-md-12 section-heading text-center to-animate">
                             <h2 class="to-animate">Media Partner</h2>
@@ -326,7 +326,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="row topics">
                         <div class="col-md-12 section-heading text-center to-animate">
                             <h2 class="to-animate">Student Partner</h2>
@@ -338,10 +338,7 @@
                         </div>
                     </div>
                 </div>
-
-            </div>
-
-                <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-6">
                     <div class="row topics">
                         <div class="col-md-12 section-heading text-center to-animate">
                             <h2 class="to-animate">Chat Partner</h2>
