--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Venue</h2>
-                            <div>30-Basement,</div>
+                            <div>33 Block,</div>
                             <span>Lovely Professional University</span>
                         </div>
                     </div>
