--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-3 col-sm-12 col-xs-12">
+                <div class="col-md-4 col-sm-12 col-xs-12">
                     <a href="first-event.html" class="fh5co-project-item to-animate">
                         <img src="images/1.jpg" alt="Image" class="img-responsive">
                     </a>
@@ -199,7 +198,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         <h3>Imagine Talks 1.0</h3>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 col-xs-12">
+                <div class="col-md-4 col-sm-12 col-xs-12">
                     <a href="second-event.html" class="fh5co-project-item to-animate">
                         <img src="images-2/003.jpg" alt="Image" class="img-responsive">
                     </a>
@@ -207,7 +206,14 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         <h3>Git &amp; Github Session</h3>
                     </div>
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-4 col-sm-12 col-xs-12">
+                    <a href="mshacks.html" class="fh5co-project-item to-animate">
+                        <img src="images-2/003.jpg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="section-heading text-center to-animate">
+                        <h3>Microsoft Hackathon 1.0</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -271,7 +277,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Version Control with Git &amp; Github (Advanced)</li>
                 </ul>
 			</div> -->
-            
+
         </div>
     </section>
 
