--- a/index.html
+++ b/index.html
@@ -97,46 +97,11 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         </div>
     </header>
 
-    <!-- <section id="particles-js" data-section="home" data-stellar-background-ratio="0.5" style="background-image: url(images/home-bg.jpg);">
+    <section id="particles-js" data-section="home" data-stellar-background-ratio="0.5" style="background-image: url(images/home-bg.jpg);">
         <div class="container">
         </div>
         <div class="slant"></div>
-    </section> -->
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="item active">
-                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home1.png" alt="First Slide"></a>
-                <!-- <div class="container" style="margin-top: -250px; padding-bottom: 0px;">
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <h6 class="hackathon-subheading2">Lovely Professional University</h6>
-                        </div>
-                    </div>
-                </div> -->
-
-            </div>
-            <div class="item">
-                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home2.jpg" alt="Second Slide"></a>
-            </div>
-            <div class="item">
-                <a href="https://mshacks.hackerearth.com/" target="_blank"><img src="images/home3.jpg" alt="Third Slide"></a>
-            </div>
-        </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>
-
+    </section>
 
     <section id="fh5co-about" data-section="about">
         <div class="container">
@@ -421,8 +386,9 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNuHy89eyPeeFK_fXVKIV7wzavokkUqmA&callback=initMap " async defer></script>
     <script src="js/google_map.js "></script>
+
     <!-- Particles.js -->
-    <!-- <script src="js/particles.js "></script> -->
+    <script src="js/particles.js "></script>
     <script src="js/app.js "></script>
 
 
