--- a/mshacks.html
+++ b/mshacks.html
@@ -101,19 +101,19 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/001.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/001.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/1.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/1.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/002.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/002.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/2.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/2.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/003.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/003.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/3.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/3.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
             </div>
@@ -121,20 +121,20 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="space"></div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/004.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/004.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/5.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/5.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
 
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/005.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/005.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/6.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/6.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/006.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/006.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/7.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/7.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
             </div>
@@ -142,18 +142,18 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="space"></div>
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/007.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/007.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/8.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/8.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/008.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/008.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/9.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/9.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/009.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/009.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/11.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/11.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
             </div>
@@ -162,18 +162,18 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/010.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/010.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/10.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/10.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/011.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/011.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/4.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/4.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <a href="images-2/012.jpg" class="fh5co-project-item image-popup to-animate">
-                        <img src="images-2/012.jpg" alt="Image" class="gallery-img img-responsive">
+                    <a href="images/mshacks/12.webp" class="fh5co-project-item image-popup to-animate">
+                        <img src="images/mshacks/12.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
             </div>
@@ -221,12 +221,6 @@ class="icon-linkedin"></i></a></li>
     <!-- Magnific Popup -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/magnific-popup-options.js"></script>
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNuHy89eyPeeFK_fXVKIV7wzavokkUqmA&callback=initMap" async defer></script>
-    <script src="js/google_map.js"></script>
-    <!-- Particles.js -->
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
 
     <script src="https://use.fontawesome.com/ec9198a6e3.js"></script>
 
