--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                 <div class="col-md-4 col-sm-12 col-xs-12">
                     <a href="mshacks.html" class="fh5co-project-item to-animate">
-                        <img src="images-2/003.jpg" alt="Image" class="img-responsive">
+                        <img src="images/mshacks/4.webp" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
                         <h3>Microsoft Hackathon 1.0</h3>
@@ -231,12 +231,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     </div>
                 </div>
             </div>
-            <div class="space"></div>
-            <div class="row">
-                <div class="register col-md-12 text-center to-animate">
-                    <a href="microsoft-hackathon.html"><button>Learn More</button></a>
-                </div>
-            </div>
+
             <!-- <div class="row">
                 <ul class="list-unstyled list-inline to-animate">
                     <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Version Control with Git &amp; Github (Advanced)</li>
