spaces added btw images

--- a/mshacks.html
+++ b/mshacks.html
@@ -78,7 +78,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         <li><a href="http://www.microsoftlpu.com/#fh5co-about" onclick="about()"><span>About</span></a></li>
                         <li class="active"><a href="http://www.microsoftlpu.com/#fh5co-gallery" onclick="gallery()"><span>Gallery</span></a></li>
                         <li><a href="http://www.microsoftlpu.com/#fh5co-testimonials" onclick="ourEvent()"><span>Upcoming Event</span></a></li>
-                        <li><a href="http://www.microsoftlpu.com/team.html" onclick="team()"><span>Team</span></a></li>
+                        <li><a href="http://www.msicrosoftlpu.com/team.html" onclick="team()"><span>Team</span></a></li>
                         <li><a href="http://www.microsoftlpu.com/#fh5co-contact" onclick="contactus()"><span>Contact Us</span></a></li>
                     </ul>
                 </div>
@@ -100,18 +100,18 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12" style='padding:15px'>
                     <a href="images/mshacks/1.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/1.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/2.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/2.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
 
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/3.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/3.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
@@ -120,19 +120,19 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="space"></div>
             <div class="space"></div>
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/5.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/5.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
 
 
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/6.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/6.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12" style='padding:15px'>
                     <a href="images/mshacks/7.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/7.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
@@ -141,17 +141,17 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="space"></div>
             <div class="space"></div>
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/8.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/8.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/9.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/9.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12" style='padding:15px'>
                     <a href="images/mshacks/11.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/11.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
@@ -161,17 +161,17 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="space"></div>
 
             <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/10.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/10.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/4.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/4.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
+                <div class="col-md-4 col-sm-4 col-xs-12"  style='padding:15px'>
                     <a href="images/mshacks/12.webp" class="fh5co-project-item image-popup to-animate">
                         <img src="images/mshacks/12.webp" alt="Image" class="gallery-img img-responsive">
                     </a>
