added padding to gallery

--- a/first-event.html
+++ b/first-event.html
@@ -87,7 +87,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         </div>
     </header>
 
-    <section style="padding-top: 130px;">
+    <section style="padding-top: 130px;" class="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading text-center">
