--- a/second-event.html
+++ b/second-event.html
@@ -87,7 +87,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
         </div>
     </header>
 
-    <section style="padding-top: 130px;">
+    <section style="padding-top: 130px;" class="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 section-heading text-center">
@@ -112,7 +112,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                	    <a href="images-2/003.jpg" class="fh5co-project-item image-popup to-animate">
+                    <a href="images-2/003.jpg" class="fh5co-project-item image-popup to-animate">
                         <img src="images-2/003.jpg" alt="Image" class="gallery-img img-responsive">
                     </a>
                 </div>
@@ -157,10 +157,10 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     </a>
                 </div>
             </div>
-             <div class="space"></div>
+            <div class="space"></div>
             <div class="space"></div>
 
-                       <div class="row">
+            <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <a href="images-2/010.jpg" class="fh5co-project-item image-popup to-animate">
                         <img src="images-2/010.jpg" alt="Image" class="gallery-img img-responsive">
@@ -202,7 +202,7 @@ class="icon-linkedin"></i></a></li>
                 </div>
             </div>
         </div>
-        
+
     </footer>
 
 
