--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row topics">
                 <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Microsoft Hackathon</h2>
+                    <h2 class="to-animate">Microsoft Imagine Camp</h2>
                 </div>
             </div>
             <div class="row space">
@@ -203,7 +203,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Date &amp; Time</h2>
-                            <div><span>18-20 November, 2017</span></div>
+                            <div><span>23-24 February, 2018</span></div>
                         </div>
                     </div>
                 </div>
@@ -214,7 +214,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Venue</h2>
-                            <div>33 Block,</div>
+                            <div>SDM Auditorium,</div>
                             <span>Lovely Professional University</span>
                         </div>
                     </div>
@@ -226,13 +226,17 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Duration</h2>
-                            <span>36 Hours</span>
+                            <span>2 days</span>
                         </div>
                     </div>
                 </div>
             </div>
 
-
+            <div class="row register">
+                <div class="col-md-12 col-lg-12 text-center">
+                <a href="www.shortto.com/imaginecamp" target="_blank"><button>Register Here</button></a>
+                    </div>
+            </div>
             <!-- <div class="row">
                 <ul class="list-unstyled list-inline to-animate">
                     <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Version Control with Git &amp; Github (Advanced)</li>
