--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
 
             <div class="row register">
                 <div class="col-md-12 col-lg-12 text-center">
-                <a href="www.shortto.com/imaginecamp" target="_blank"><button>Register Here</button></a>
+                <a href="https://www.shortto.com/imaginecamp" target="_blank"><button>Register Here</button></a>
                     </div>
             </div>
             <!-- <div class="row">
