--- a/team.html
+++ b/team.html
@@ -183,6 +183,19 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="col-md-4">
+                        <div class="fh5co-person text-center to-animate">
+                            <figure><img src="images/aditi.png" alt="Image"></figure>
+                            <h3>Aditi Pandey</h3>
+                            <span class="fh5co-position">Data Science</span>
+                            <ul class="social social-circle">
+                                <li><a href="https://www.linkedin.com/in/aditi-pandey-8516a3148/" target="_blank"><i class="icon-linkedin"></i></a></li>
+                                <li><a href="https://github.com/aditiap" target="_blank"><i class="icon-github"></i></a></li>    
+                            </ul>
+                        </div>
+                    </div> 
+
                 <div class="col-md-4">
                     <div class="fh5co-person text-center to-animate">
                         <figure><img src="images/prabhpreet.jpeg" alt="Image"></figure>
@@ -191,17 +204,6 @@
                         <ul class="social social-circle">
                             <li><a href="https://www.linkedin.com/in/prabhpreet-kaur-bhamra-b90b39130/" target="_blank"><i class="icon-linkedin"></i></a></li>
                             <li><a href="https://www.facebook.com/prabhpreet.kaurbhamra/" target="_blank"><i class="icon-facebook"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="fh5co-person text-center to-animate">
-                        <figure><img src="images/bipin.jpg" alt="Image"></figure>
-                        <h3>Bipin Kumar Singh</h3>
-                        <span class="fh5co-position">Full Stack Developer</span>
-                        <ul class="social social-circle">
-                            <li><a href="https://www.linkedin.com/in/bipn-kumar-9378b310b/" target="_blank"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="https://www.facebook.com/kumar.b.singh" target="_blank"><i class="icon-facebook"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -247,20 +249,19 @@
                 </div>
             </div>
             <div class="row">
-
-                <div class="col-md-4">
-                    <div class="fh5co-person text-center to-animate">
-                        <figure><img src="images/vjk.jpg" alt="Image"></figure>
-                        <h3>Vijay Kannan</h3>
-                        <span class="fh5co-position">Ethical Hacker</span>
-                        <ul class="social social-circle">
-                            <li><a href="http://www.linkedin.com/in/vjkhere" target="_blank"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="http://www.facebook.com/vjkhere" target="_blank"><i class="icon-facebook"></i></a></li>
-                            <li><a href="http://www.github.com/vjkhere" target="_blank"><i class="icon-github"></i></a></li>
-                            <li><a href="http://www.twitter.com/vjkhere" target="_blank"><i class="icon-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
+                
+                    <div class="col-md-4">
+                            <div class="fh5co-person text-center to-animate">
+                                <figure><img src="images/bipin.jpg" alt="Image"></figure>
+                                <h3>Bipin Kumar Singh</h3>
+                                <span class="fh5co-position">Full Stack Developer</span>
+                                <ul class="social social-circle">
+                                    <li><a href="https://www.linkedin.com/in/bipn-kumar-9378b310b/" target="_blank"><i class="icon-linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/kumar.b.singh" target="_blank"><i class="icon-facebook"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                
                 <div class="col-md-4">
                     <div class="fh5co-person text-center to-animate">
                         <figure><img src="images/puneet.jpeg" alt="Image"></figure>
