Updated speaker details

--- a/Imagine_cup.html
+++ b/Imagine_cup.html
@@ -209,9 +209,9 @@
                         </div>
                         <div class="col-md-6">
                             <div class="fh5co-person text-center  ">
-                                <figure><img src="https://media.licdn.com/media/p/1/000/069/176/0e70305.jpg" alt="Image"></figure>
+                                <figure><img src="https://image.ibb.co/ftOHWS/vibhorM.jpg" alt="Image"></figure>
                                 <h3>Vibhor Srivastva</h3>
-                                <span class="fh5co-position">Head of Sales Marketing at Atrust Computer Corp</span>
+                                <span class="fh5co-position">Product Manager, Microsoft, Gurgaon</span>
                                 <ul class="social social-circle">
                                     <li><a href="https://www.linkedin.com/in/vibhor-shrivastava-26775814/" target="_blank"><i class="icon-linkedin"></i></a></li>
                                     
