--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="We are microsoft technical Community and we thrive to make LPU, a tech enabled Campus. By the 
 support of Microsoft at back , and your good wishes we wish to energize today's youth to be in the frontier of Technology and Developement." />
     <meta name="keywords" content="microsoft, microsoft student partner, MSP, microsoft technical community, MSTC, MSP-LPU" />
-    <meta name="author" content="Rowhit Swami" />
+    <meta name="author" content="Rohit Swami" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="" />
@@ -192,7 +192,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row topics">
                 <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">Microsoft Imagine Camp</h2>
+                    <h2 class="to-animate">MSTC Cloud JAM</h2>
                 </div>
             </div>
             <div class="row space">
@@ -203,7 +203,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Date &amp; Time</h2>
-                            <div><span>23-24 February, 2018</span></div>
+                            <div><span>Sunday, 31 March 2018</span></div>
                         </div>
                     </div>
                 </div>
@@ -214,7 +214,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Venue</h2>
-                            <div>SDM Auditorium,</div>
+                            <div>Block 34-111,</div>
                             <span>Lovely Professional University</span>
                         </div>
                     </div>
@@ -225,8 +225,8 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                             <i class="fa fa-bullhorn fa-2x" aria-hidden="true"></i>
                         </div>
                         <div class="col-md-10 to-animate">
-                            <h2>Duration</h2>
-                            <span>2 days</span>
+                            <h2>Time</h2>
+                            <span>10:00 IST - 14:00 IST</span>
                         </div>
                     </div>
                 </div>
