--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
 
-            <div class="row register">
+            <!-- <div class="row register">
                 <div class="col-md-12 col-lg-12 text-center">
                 <a href="http://www.microsoftlpu.com/Imagine_cup.html"><button>See More</button></a>
                     </div>
-            </div>
+            </div> -->
             <!-- <div class="row">
                 <ul class="list-unstyled list-inline to-animate">
                     <li class="col-md-12 col-xs-12 "><i class="fa fa-arrow-circle-right " aria-hidden="true "></i>&nbsp;&nbsp;Version Control with Git &amp; Github (Advanced)</li>
