--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Date &amp; Time</h2>
-                            <div><span>Sunday, 31 March 2018</span></div>
+                            <div><span>Sunday, 1st April 2018</span></div>
                         </div>
                     </div>
                 </div>
