--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-12 col-xs-12">
+                <div class="col-md-3 col-sm-12 col-xs-12">
                     <a href="first-event.html" class="fh5co-project-item to-animate">
                         <img src="images/1.jpg" alt="Image" class="img-responsive">
                     </a>
@@ -163,7 +163,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         <h3>Imagine Talks 1.0</h3>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 col-xs-12">
+                <div class="col-md-3 col-sm-12 col-xs-12">
                     <a href="second-event.html" class="fh5co-project-item to-animate">
                         <img src="images-2/003.jpg" alt="Image" class="img-responsive">
                     </a>
@@ -171,12 +171,21 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         <h3>Git &amp; Github Session</h3>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 col-xs-12">
-                    <a href="mshacks.html" class="fh5co-project-item to-animate">
-                        <img src="images/mshacks/4.webp" alt="Image" class="img-responsive">
-                    </a>
-                    <div class="section-heading text-center to-animate">
-                        <h3>Microsoft Hackathon 1.0</h3>
+                    <div class="col-md-3 col-sm-12 col-xs-12">
+                        <a href="mshacks.html" class="fh5co-project-item to-animate">
+                            <img src="images/mshacks/4.webp" alt="Image" class="img-responsive">
+                        </a>
+                        <div class="section-heading text-center to-animate">
+                            <h3>Microsoft Hackathon 1.0</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-12 col-xs-12">
+                        <a href="mshacks.html" class="fh5co-project-item to-animate">
+                            <img src="images/imagine_camp/1.jpg" alt="Image" class="img-responsive">
+                        </a>
+                        <div class="section-heading text-center to-animate">
+                            <h3>Imagine Camp</h3>
+                        </div>
                     </div>
                 </div>
             </div>
