--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row">
                 <div class="col-md-3 col-sm-12 col-xs-12">
-                    <a href="first-event.html" class="fh5co-project-item to-animate">
+                    <a href="imagine-talk.html" class="fh5co-project-item to-animate">
                         <img src="images/1.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
@@ -164,7 +164,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-12 col-xs-12">
-                    <a href="second-event.html" class="fh5co-project-item to-animate">
+                    <a href="github-workshop.html" class="fh5co-project-item to-animate">
                         <img src="images-2/003.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
@@ -180,7 +180,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-12 col-xs-12">
-                        <a href="mshacks.html" class="fh5co-project-item to-animate">
+                        <a href="imagine-camp-gallery.html" class="fh5co-project-item to-animate">
                             <img src="images/imagine_camp/1.jpg" alt="Image" class="img-responsive">
                         </a>
                         <div class="section-heading text-center to-animate">
