--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row topics">
                 <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">MSTC Cloud JAM</h2>
+                    <h2 class="to-animate">MSTC Android JAM</h2>
                 </div>
             </div>
             <div class="row space">
@@ -212,7 +212,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Date &amp; Time</h2>
-                            <div><span>Sunday, 1st April 2018</span></div>
+                            <div><span>Sunday, 8th April 2018</span></div>
                         </div>
                     </div>
                 </div>
