Updated Android Icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
     </script>
     <script type="text/javascript" data-cfasync="false" src="//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js" data-shr-siteid="8972e53157d800c8454cbe7c0a293687" async="async"></script>
 
-
+<style>
+    .fa-android {
+        color: #a4c639;
+    }
+</style>
 </head>
 
 <body>
@@ -201,7 +205,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             </div>
             <div class="row topics">
                 <div class="col-md-12 section-heading text-center to-animate">
-                    <h2 class="to-animate">MSTC Android JAM</h2>
+                    <i class="to-animate fab fa-android"></i>&nbsp; <h2 class="to-animate">MSTC Android JAM</h2>
                 </div>
             </div>
             <div class="row space">
