--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                         <div class="col-md-10 to-animate">
                             <h2>Venue</h2>
-                            <div>Block 34-111,</div>
+                            <div>SSDM Auditorium,</div>
                             <span>Lovely Professional University</span>
                         </div>
                     </div>
