--- a/team.html
+++ b/team.html
@@ -159,13 +159,14 @@
                 </div>
                 <div class="col-md-4">
                     <div class="fh5co-person text-center to-animate">
-                        <figure><img src="images/nikhil.jpeg" alt="Image"></figure>
-                        <h3>Nikhil Singh</h3>
-                        <span class="fh5co-position">iOS/MEAN Stack Developer</span>
+                        <figure><img src="images/jay.jpg" alt="Image"></figure>
+                        <h3>Jayraj Makhar</h3>
+                        <span class="fh5co-position">Python Coder</span>
                         <ul class="social social-circle">
-                            <li><a href="https://in.linkedin.com/in/nikhil-singh7/" target="_blank"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="https://www.facebook.com/officialNikhilSingh/" target="_blank"><i class="icon-facebook"></i></a></li>
-                            <li><a href="https://github.com/nikhilmufc7/" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="https://in.linkedin.com/in/jayrajm97/" target="_blank"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/JayrajM1/" target="_blank"><i class="icon-facebook"></i></a></li>
+                            <li><a href="https://github.com/jayrajm97/" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="https://www.twitter.com/jayrajm97/" target="_blank"><i class="icon-twitter"></i></a></li>
                         </ul>
                     </div>
                 </div>
