--- a/index.html
+++ b/index.html
@@ -187,9 +187,18 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                         </div>
                     </div>
                 </div>
+                  <div class="row">
+                <div class="col-md-3 col-md-offset-4 col-sm-12 col-xs-12 text-center">
+                    <a href="hack-a-day.html" class="fh5co-project-item to-animate">
+                        <img src="images/hack-a-day/0.jpg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="section-heading text-center to-animate">
+                        <h3>Hack-A-Day</h3>
+                    </div>
+                </div>
+              </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <section id="fh5co-testimonials" class="event" data-section="event">
         <div class="container">
