--- a/team.html
+++ b/team.html
@@ -166,7 +166,7 @@
                             <li><a href="https://in.linkedin.com/in/jayrajm97/" target="_blank"><i class="icon-linkedin"></i></a></li>
                             <li><a href="https://www.facebook.com/JayrajM1/" target="_blank"><i class="icon-facebook"></i></a></li>
                             <li><a href="https://github.com/jayrajm97/" target="_blank"><i class="icon-github"></i></a></li>
-                            <li><a href="https://www.twitter.com/jayrajm97/" target="_blank"><i class="icon-twitter"></i></a></li>
+                            <li><a href="https://www.twitter.com/JayrajMakhar/" target="_blank"><i class="icon-twitter"></i></a></li>
                         </ul>
                     </div>
                 </div>
