--- a/team.html
+++ b/team.html
@@ -149,7 +149,7 @@
     <div class="fh5co-person text-center to-animate">
         <figure><img src="images/ipuvi.jpg" alt="Image"></figure>
         <h3>Ipuvi Mishra</h3>
-        <span class="fh5co-position">Auditr</span>
+        <span class="fh5co-position">Auditor</span>
         <ul class="social social-circle">
             <li><a href="https://www.linkedin.com/in/ipuvi-mishra-296990130/" target="_blank"><i class="icon-linkedin"></i></a></li>
             <li><a href="https://www.facebook.com/profile.php?id=100007785078010" target="_blank"><i class="icon-facebook"></i></a></li>
@@ -294,7 +294,7 @@
                         <h3>Jay Pathak</h3>
                         <span class="fh5co-position">Web Developer</span>
                         <ul class="social social-circle">
-                             <li><a href="https://www.instagram.com/jaypathak_/" target="_blank"><i class="icon-instagram"></i></a></li>
+
                             <li><a href="https://www.linkedin.com/in/jaypathak14/" target="_blank"><i class="icon-linkedin"></i></a></li>
                             <li><a href="https://github.com/jaypathak14" target="_blank"><i class="icon-github"></i></a></li>
                             <li><a href="https://www.twitter.com/jaypathak_?s=09/" target="_blank"><i class="icon-twitter"></i></a></li>
