--- a/team.html
+++ b/team.html
@@ -173,7 +173,7 @@
         
 
             <div class="col-md-12 section-heading text-center">
-                  <h3 class="to-animate">Core Developer Team</h3>
+                  <h3 class="to-animate">CORE DEVELOPER TEAM</h3>
             </div>
 
             <div class="row">
