--- a/team.html
+++ b/team.html
@@ -186,7 +186,7 @@
                             <li><a href="https://www.linkedin.com/in/abhinavakhil55555" target="_blank"><i class="icon-linkedin"></i></a></li>
                             <li><a href="https://www.facebook.com/profile.php?id=100004579636428" target="_blank"><i class="icon-facebook"></i></a></li>
                             <li><a href="https://github.com/abhinavakhil" target="_blank"><i class="icon-github"></i></a></li>
-                            
+                            <li><a href="https://www.instagram.com/abhinav__akhil/" target="_blank"><i class="icon-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                             <div class="fh5co-person text-center to-animate">
                                 <figure><img src="images/ishan.jpeg" alt="Image"></figure>
                                 <h3>Ishan Singh</h3>
-                                <span class="fh5co-position">Android Developer</span>
+                                <span class="fh5co-position">Competitive Coder and Organizer</span>
                                 <ul class="social social-circle">
                                 <li><a href="https://www.linkedin.com/in/ishan-singh-41a932145/" target="_blank"><i class="icon-linkedin"></i></a></li>
                                 <li><a href="https://www.facebook.com/im.ishan98/" target="_blank"><i class="icon-facebook"></i></a></li>
@@ -280,7 +280,7 @@
                     <div class="fh5co-person text-center to-animate">
                         <figure><img src="images/viswa.jpg" alt="Image"></figure>
                         <h3>Vishwajit Nerkar</h3>
-                        <span class="fh5co-position">FullStack Developer</span>
+                        <span class="fh5co-position">Full stack developer trainer and Interviewer</span>
                         <ul class="social social-circle">
                             <li><a href="https://linkedin.com/in/vishwajitnerkar" target="_blank"><i class="icon-linkedin"></i></a></li>
                             <li><a href="https://www.facebook.com/vishwajitnerkar" target="_blank"><i class="icon-facebook"></i></a></li>
@@ -351,6 +351,19 @@
                     <ul class="social social-circle">
                         <li><a href="https://www.linkedin.com/in/mansi-anand" target="_blank"><i class="icon-linkedin"></i></a></li>
                         <li><a href="https://github.com/mansi996" target="_blank"><i class="icon-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="fh5co-person text-center to-animate">
+                    <figure><img src="images/sakku.jpeg" alt="Image"></figure>
+                    <h3>Saket Kumar Sankrit</h3>
+                    <span class="fh5co-position">ML Engineer</span>
+                    <ul class="social social-circle">
+                        <li><a href="" target="_blank"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/098saket" target="_blank"><i class="icon-facebook"></i></a></li>
+                            <li><a href="https://github.com/098saket" target="_blank"><i class="icon-github"></i></a></li>
+                            <li><a href="https://twitter.com/098saket" target="_blank"><i class="icon-twitter"></i></a></li>
                     </ul>
                 </div>
             </div>
