--- a/team.html
+++ b/team.html
@@ -360,7 +360,7 @@
                     <h3>Saket Kumar Sankrit</h3>
                     <span class="fh5co-position">ML Engineer</span>
                     <ul class="social social-circle">
-                        <li><a href="" target="_blank"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="https://www.instagram.com/sakku098" target="_blank"><i class="icon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/098saket" target="_blank"><i class="icon-facebook"></i></a></li>
                             <li><a href="https://github.com/098saket" target="_blank"><i class="icon-github"></i></a></li>
                             <li><a href="https://twitter.com/098saket" target="_blank"><i class="icon-twitter"></i></a></li>
