Fixed Mobile Site

--- a/letshack/index.html
+++ b/letshack/index.html
@@ -1123,9 +1123,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="gap-20"></div>
+                    
                     <br>
-                    <div id="footer-contact" class="footer-social">
+                    <div id="footer-contact" class="footer-social text-center">
                         <ul>
                             <li><a href="https://www.facebook.com/mstclpu" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/mstclpu" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -1134,8 +1134,8 @@
                             <li><a href="https://plus.google.com/u/1/communities/114043285727179316695" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                         </ul>
                     </div><!-- Footer social end -->
-                    <div class="gap-20"></div>
-                    <p>Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By<a  href="https://github.com/pranav0408/" target="_blank"> Pranav Singh</a></p>
+                    
+                    <p class="mt-5" >Made with <i style="color: #2970FB;" class="fa fa-2x fa-heart"></i> By<a  href="https://github.com/pranav0408/" target="_blank"> Pranav Singh</a></p>
 
                 </div><!-- Col end -->
 
