--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
                         <li><a href="#" data-nav-section="about"><span>About</span></a></li>
-                        <li><a href="training/index.html" data-nav-section="training"><span>Training</span></a></li>
+                        <li><a href="training/index.html" onclick="training()"><span>Training</span></a></li>
                         <li><a href="#" data-nav-section="gallery"><span>Gallery</span></a></li>
                         <li><a href="#" data-nav-section="event"><span>Upcoming Event</span></a></li>
                         <li><a href="team.html" onclick="team()"><span>Team</span></a></li>
